--- a/packages/locales/en.yaml
+++ b/packages/locales/en.yaml
@@ -6,9 +6,8 @@ button:
   toggle_dark: Toggle dark mode
   toggle_langs: Change languages
 intro:
-  desc: 📱 A H5 Template(Vite + Vue) inspired by Vitesse.
+  desc: Opinionated Vite Starter Template
   dynamic-route: Demo of dynamic route
   hi: Hi, {name}!
   aka: Also known as
-  whats-your-name: What's your name?
 not-found: Not found
